--- a/JavaScript/객체.html
+++ b/JavaScript/객체.html
@@ -8,21 +8,19 @@
   </head>
   <body>
     <script>
-      //deep copy
-      const user = {
-        name: "park",
-        age: 85,
-        email: ["phk2143@naver.com"],
-      };
+      function add(x, callback) {
+        let sum = x + x;
+        console.log(sum);
+        callback(sum);
+      }
 
-      const copyUser = { ...user };
-      console.log(copyUser === user);
-
-      user.age = 22;
-      console.log("user ", user);
-      console.log("copyUser", copyUser);
-
-      user.email.push("sdads@naver.com");
+      add(4, function (result) {
+        add(result, function (result) {
+          add(result, function (result) {
+            console.log("finish!");
+          });
+        });
+      });
 
       /*구조 분해 할당
 
